fix(async): fix async retry and num_try/success value.

--- a/notebooks/run_set_repeat_demo.ipynb
+++ b/notebooks/run_set_repeat_demo.ipynb
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
@@ -175,92 +175,201 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Warning: experiment 121 is not finished yet...\n"
+      "Warning: experiment 202 is not finished yet...\n",
+      "Warning: experiment 212 is not finished yet...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib/python3/dist-packages/numpy/core/fromnumeric.py:3504: RuntimeWarning: Mean of empty slice.\n",
+      "/usr/lib/python3/dist-packages/numpy/_core/fromnumeric.py:3860: RuntimeWarning: Mean of empty slice.\n",
       "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:129: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/usr/lib/python3/dist-packages/numpy/_core/_methods.py:145: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:206: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
+      "/usr/lib/python3/dist-packages/numpy/_core/_methods.py:223: RuntimeWarning: Degrees of freedom <= 0 for slice\n",
       "  ret = _var(a, axis=axis, dtype=dtype, out=out, ddof=ddof,\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:163: RuntimeWarning: invalid value encountered in divide\n",
+      "/usr/lib/python3/dist-packages/numpy/_core/_methods.py:181: RuntimeWarning: invalid value encountered in divide\n",
       "  arrmean = um.true_divide(arrmean, div, out=arrmean,\n",
-      "/usr/lib/python3/dist-packages/numpy/core/_methods.py:198: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "/usr/lib/python3/dist-packages/numpy/_core/_methods.py:215: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  ret = ret.dtype.type(ret / rcount)\n",
-      "/tmp/ipykernel_295284/3083041471.py:36: RuntimeWarning: Mean of empty slice.\n",
+      "/tmp/ipykernel_500173/3083041471.py:36: RuntimeWarning: Mean of empty slice.\n",
       "  row[(metric, 'mean_std')] = f\"{arr.mean():.2f} ± {arr.std():.2f}\"  # Formatting as 'mean±std'\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Warning: experiment 209 is not finished yet...\n",
+      "Warning: experiment 205 is not finished yet...\n",
+      "Warning: experiment 208 is not finished yet...\n",
+      "Warning: experiment 207 is not finished yet...\n",
+      "Warning: experiment 210 is not finished yet...\n",
+      "Warning: experiment 211 is not finished yet...\n",
+      "Warning: experiment 204 is not finished yet...\n",
+      "Warning: experiment 203 is not finished yet...\n",
+      "Warning: experiment 206 is not finished yet...\n",
+      "Warning: experiment 214 is not finished yet...\n",
+      "Warning: experiment 215 is not finished yet...\n",
+      "Warning: experiment 216 is not finished yet...\n",
+      "Warning: experiment 217 is not finished yet...\n",
+      "Warning: experiment 218 is not finished yet...\n",
+      "Warning: experiment 219 is not finished yet...\n",
+      "Warning: experiment 220 is not finished yet...\n",
+      "Warning: experiment 221 is not finished yet...\n",
+      "Warning: experiment 222 is not finished yet...\n",
+      "Warning: experiment 223 is not finished yet...\n",
+      "Warning: experiment 224 is not finished yet...\n",
+      "Warning: experiment 225 is not finished yet...\n",
+      "Warning: experiment 226 is not finished yet...\n",
+      "Warning: experiment 227 is not finished yet...\n",
+      "Warning: experiment 228 is not finished yet...\n",
+      "Warning: experiment 229 is not finished yet...\n",
+      "Warning: experiment 230 is not finished yet...\n",
+      "Warning: experiment 231 is not finished yet...\n",
+      "Warning: experiment 232 is not finished yet...\n",
+      "Warning: experiment 233 is not finished yet...\n",
+      "Warning: experiment 234 is not finished yet...\n",
+      "Warning: experiment 235 is not finished yet...\n",
+      "Warning: experiment 236 is not finished yet...\n",
+      "Warning: experiment 237 is not finished yet...\n",
+      "Warning: experiment 238 is not finished yet...\n",
+      "Warning: experiment 239 is not finished yet...\n",
+      "Warning: experiment 240 is not finished yet...\n",
+      "Warning: experiment 241 is not finished yet...\n",
+      "Warning: experiment 242 is not finished yet...\n",
+      "Warning: experiment 243 is not finished yet...\n",
+      "Warning: experiment 244 is not finished yet...\n",
+      "Warning: experiment 245 is not finished yet...\n",
+      "Warning: experiment 246 is not finished yet...\n",
+      "Warning: experiment 247 is not finished yet...\n",
+      "Warning: experiment 248 is not finished yet...\n",
+      "Warning: experiment 249 is not finished yet...\n",
+      "Warning: experiment 250 is not finished yet...\n",
+      "Warning: experiment 251 is not finished yet...\n",
+      "Warning: experiment 252 is not finished yet...\n",
+      "Warning: experiment 253 is not finished yet...\n",
+      "Warning: experiment 254 is not finished yet...\n",
+      "Warning: experiment 255 is not finished yet...\n",
+      "Warning: experiment 256 is not finished yet...\n",
+      "Warning: experiment 257 is not finished yet...\n",
+      "Warning: experiment 258 is not finished yet...\n",
+      "Warning: experiment 259 is not finished yet...\n",
+      "Warning: experiment 260 is not finished yet...\n",
+      "Warning: experiment 261 is not finished yet...\n",
+      "Warning: experiment 262 is not finished yet...\n",
+      "Warning: experiment 263 is not finished yet...\n",
+      "Warning: experiment 264 is not finished yet...\n",
+      "Warning: experiment 265 is not finished yet...\n",
+      "Warning: experiment 266 is not finished yet...\n",
+      "Warning: experiment 267 is not finished yet...\n",
+      "Warning: experiment 268 is not finished yet...\n",
+      "Warning: experiment 269 is not finished yet...\n",
+      "Warning: experiment 270 is not finished yet...\n",
+      "Warning: experiment 271 is not finished yet...\n",
+      "Warning: experiment 213 is not finished yet...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_500173/4153448869.py:16: FutureWarning: The behavior of Series.idxmax with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  max_mean_index = means.idxmax()\n",
+      "/tmp/ipykernel_500173/4153448869.py:17: FutureWarning: The behavior of Series.idxmin with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  min_mean_index = means.idxmin()\n",
+      "/tmp/ipykernel_500173/4153448869.py:16: FutureWarning: The behavior of Series.idxmax with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  max_mean_index = means.idxmax()\n",
+      "/tmp/ipykernel_500173/4153448869.py:17: FutureWarning: The behavior of Series.idxmin with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  min_mean_index = means.idxmin()\n",
+      "/tmp/ipykernel_500173/4153448869.py:16: FutureWarning: The behavior of Series.idxmax with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  max_mean_index = means.idxmax()\n",
+      "/tmp/ipykernel_500173/4153448869.py:17: FutureWarning: The behavior of Series.idxmin with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  min_mean_index = means.idxmin()\n",
+      "/tmp/ipykernel_500173/4153448869.py:16: FutureWarning: The behavior of Series.idxmax with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  max_mean_index = means.idxmax()\n",
+      "/tmp/ipykernel_500173/4153448869.py:17: FutureWarning: The behavior of Series.idxmin with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  min_mean_index = means.idxmin()\n",
+      "/tmp/ipykernel_500173/4153448869.py:16: FutureWarning: The behavior of Series.idxmax with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  max_mean_index = means.idxmax()\n",
+      "/tmp/ipykernel_500173/4153448869.py:17: FutureWarning: The behavior of Series.idxmin with all-NA values, or any-NA and skipna=False, is deprecated. In a future version this will raise ValueError\n",
+      "  min_mean_index = means.idxmin()\n"
      ]
     },
     {
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_561d8_row0_col0, #T_561d8_row0_col1, #T_561d8_row0_col4, #T_561d8_row1_col2, #T_561d8_row2_col3 {\n",
-       "  font-weight: bold;\n",
-       "  color: green;\n",
-       "}\n",
-       "#T_561d8_row0_col2, #T_561d8_row0_col3, #T_561d8_row1_col0, #T_561d8_row1_col4, #T_561d8_row2_col1 {\n",
-       "  font-weight: bold;\n",
-       "  color: salmon;\n",
-       "}\n",
        "</style>\n",
-       "<table id=\"T_561d8\">\n",
+       "<table id=\"T_a6cca\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_561d8_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
-       "      <th id=\"T_561d8_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
-       "      <th id=\"T_561d8_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
-       "      <th id=\"T_561d8_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
-       "      <th id=\"T_561d8_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
+       "      <th id=\"T_a6cca_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
+       "      <th id=\"T_a6cca_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
+       "      <th id=\"T_a6cca_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
+       "      <th id=\"T_a6cca_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
+       "      <th id=\"T_a6cca_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_561d8_level0_row0\" class=\"row_heading level0 row0\" >meta-llama/Meta-Llama-3.1-70B-Instruct</th>\n",
-       "      <td id=\"T_561d8_row0_col0\" class=\"data row0 col0\" >1.00 ± 0.00</td>\n",
-       "      <td id=\"T_561d8_row0_col1\" class=\"data row0 col1\" >0.19 ± 0.26</td>\n",
-       "      <td id=\"T_561d8_row0_col2\" class=\"data row0 col2\" >1.33 ± 1.00</td>\n",
-       "      <td id=\"T_561d8_row0_col3\" class=\"data row0 col3\" >16.28 ± 2.25</td>\n",
-       "      <td id=\"T_561d8_row0_col4\" class=\"data row0 col4\" >87.76 ± 32.74</td>\n",
+       "      <th id=\"T_a6cca_level0_row0\" class=\"row_heading level0 row0\" >google/gemma-2-9b-it</th>\n",
+       "      <td id=\"T_a6cca_row0_col0\" class=\"data row0 col0\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row0_col1\" class=\"data row0 col1\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row0_col2\" class=\"data row0 col2\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row0_col3\" class=\"data row0 col3\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row0_col4\" class=\"data row0 col4\" >nan ± nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_561d8_level0_row1\" class=\"row_heading level0 row1\" >mfs-baseline-rag</th>\n",
-       "      <td id=\"T_561d8_row1_col0\" class=\"data row1 col0\" >0.91 ± 0.03</td>\n",
-       "      <td id=\"T_561d8_row1_col1\" class=\"data row1 col1\" >0.14 ± 0.05</td>\n",
-       "      <td id=\"T_561d8_row1_col2\" class=\"data row1 col2\" >5.38 ± 0.29</td>\n",
-       "      <td id=\"T_561d8_row1_col3\" class=\"data row1 col3\" >129.39 ± 2.54</td>\n",
-       "      <td id=\"T_561d8_row1_col4\" class=\"data row1 col4\" >4.60 ± 0.20</td>\n",
+       "      <th id=\"T_a6cca_level0_row1\" class=\"row_heading level0 row1\" >meta-llama/Llama-3.1-8B-Instruct</th>\n",
+       "      <td id=\"T_a6cca_row1_col0\" class=\"data row1 col0\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row1_col1\" class=\"data row1 col1\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row1_col2\" class=\"data row1 col2\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row1_col3\" class=\"data row1 col3\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row1_col4\" class=\"data row1 col4\" >nan ± nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_561d8_level0_row2\" class=\"row_heading level0 row2\" >AgentPublic/llama3-instruct-8b</th>\n",
-       "      <td id=\"T_561d8_row2_col0\" class=\"data row2 col0\" >0.91 ± 0.01</td>\n",
-       "      <td id=\"T_561d8_row2_col1\" class=\"data row2 col1\" >0.03 ± 0.03</td>\n",
-       "      <td id=\"T_561d8_row2_col2\" class=\"data row2 col2\" >3.59 ± 0.29</td>\n",
-       "      <td id=\"T_561d8_row2_col3\" class=\"data row2 col3\" >310.04 ± 10.59</td>\n",
-       "      <td id=\"T_561d8_row2_col4\" class=\"data row2 col4\" >6.92 ± 1.11</td>\n",
+       "      <th id=\"T_a6cca_level0_row2\" class=\"row_heading level0 row2\" >meta-llama/Llama-3.2-3B-Instruct</th>\n",
+       "      <td id=\"T_a6cca_row2_col0\" class=\"data row2 col0\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row2_col1\" class=\"data row2 col1\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row2_col2\" class=\"data row2 col2\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row2_col3\" class=\"data row2 col3\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row2_col4\" class=\"data row2 col4\" >nan ± nan</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_561d8_level0_row3\" class=\"row_heading level0 row3\" >meta-llama/Meta-Llama-3.1-8B-Instruct</th>\n",
-       "      <td id=\"T_561d8_row3_col0\" class=\"data row3 col0\" >0.94 ± 0.01</td>\n",
-       "      <td id=\"T_561d8_row3_col1\" class=\"data row3 col1\" >0.03 ± 0.03</td>\n",
-       "      <td id=\"T_561d8_row3_col2\" class=\"data row3 col2\" >3.58 ± 0.28</td>\n",
-       "      <td id=\"T_561d8_row3_col3\" class=\"data row3 col3\" >302.56 ± 13.61</td>\n",
-       "      <td id=\"T_561d8_row3_col4\" class=\"data row3 col4\" >7.18 ± 1.51</td>\n",
+       "      <th id=\"T_a6cca_level0_row3\" class=\"row_heading level0 row3\" >meta-llama/Llama-3.3-70B-Instruct</th>\n",
+       "      <td id=\"T_a6cca_row3_col0\" class=\"data row3 col0\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row3_col1\" class=\"data row3 col1\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row3_col2\" class=\"data row3 col2\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row3_col3\" class=\"data row3 col3\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row3_col4\" class=\"data row3 col4\" >nan ± nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_a6cca_level0_row4\" class=\"row_heading level0 row4\" >mfs-baseline-rag</th>\n",
+       "      <td id=\"T_a6cca_row4_col0\" class=\"data row4 col0\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row4_col1\" class=\"data row4 col1\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row4_col2\" class=\"data row4 col2\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row4_col3\" class=\"data row4 col3\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row4_col4\" class=\"data row4 col4\" >nan ± nan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th id=\"T_a6cca_level0_row5\" class=\"row_heading level0 row5\" >neuralmagic/Meta-Llama-3.1-70B-Instruct-FP8</th>\n",
+       "      <td id=\"T_a6cca_row5_col0\" class=\"data row5 col0\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row5_col1\" class=\"data row5 col1\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row5_col2\" class=\"data row5 col2\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row5_col3\" class=\"data row5 col3\" >nan ± nan</td>\n",
+       "      <td id=\"T_a6cca_row5_col4\" class=\"data row5 col4\" >nan ± nan</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7fdc04fe1bb0>"
+       "<pandas.io.formats.style.Styler at 0x7fa949083e00>"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,17 +516,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "621c86d1-18b8-4ba8-b827-9382a26beda6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'experiment_ids': [121], 'result_ids': []}"
+       "{'experiment_ids': [], 'result_ids': []}"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -428,6 +537,14 @@
     "response = requests.post(f'{EG1_API_URL}/retry/experiment_set/{expset_id}', headers=headers)\n",
     "response.json()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bd0d32b4-b903-45e9-8add-51e4c8b91677",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
