feat: add multi-step LLM generations + MCP client to bridge

--- a/notebooks/run_set_ragmetrics_demo.ipynb
+++ b/notebooks/run_set_ragmetrics_demo.ipynb
@@ -304,6 +304,38 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "779b384a-436f-4280-bf46-250f065ba19c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Patching the experiment set\n",
+    "grid_params = {\n",
+    "    \"model\": [\n",
+    "        {\n",
+    "          \"name\": \"meta-llama/Llama-3.3-70B-Instruct\", \n",
+    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "        },\n",
+    "        {\n",
+    "         \"name\": \"deepseek-ai/DeepSeek-R1-Distill-Qwen-32B\",\n",
+    "          \"base_url\": MFS_API_URL, \"api_key\": MFS_API_KEY, \n",
+    "        },\n",
+    "    ],\n",
+    "}\n",
+    "expset = {\n",
+    "    \"cv\": {\"common_params\": common_params, \"grid_params\": grid_params, \"repeat\":3}\n",
+    "}\n",
+    "response = requests.patch(f'{EG1_API_URL}/experiment_set/{expset_id}', json=expset, headers=headers)\n",
+    "resp = response.json()\n",
+    "if \"id\" in resp:\n",
+    "    expset_id = resp[\"id\"]\n",
+    "    print(f'Created expset: {resp[\"name\"]} ({resp[\"id\"]})')\n",
+    "else:\n",
+    "    print(resp)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6f27987a-d0c1-46d3-949e-407c3aa1895f",
    "metadata": {},
