--- a/notebooks/run_set_repeat_demo.ipynb
+++ b/notebooks/run_set_repeat_demo.ipynb
@@ -43,7 +43,7 @@
     "\n",
     "dotenv.load_dotenv(\"../.env\")\n",
     "sys.path.append(\"..\")\n",
-    "from eg1.api.utils import log_and_raise_for_status\n",
+    "from eg1.utils import log_and_raise_for_status\n",
     "\n",
     "#EG1_API_URL = \"http://localhost:8000/v1\"\n",
     "EG1_API_URL = \"https://eg1.dev.etalab.gouv.fr/v1\"\n",
@@ -168,109 +168,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "177816f4-1105-497d-a14b-7178850d36f4",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<style type=\"text/css\">\n",
-       "#T_d18d5_row0_col1, #T_d18d5_row0_col2, #T_d18d5_row3_col0, #T_d18d5_row5_col3, #T_d18d5_row5_col4 {\n",
-       "  font-weight: bold;\n",
-       "  color: green;\n",
-       "}\n",
-       "#T_d18d5_row1_col3, #T_d18d5_row7_col0, #T_d18d5_row7_col1, #T_d18d5_row7_col2, #T_d18d5_row7_col4 {\n",
-       "  font-weight: bold;\n",
-       "  color: salmon;\n",
-       "}\n",
-       "</style>\n",
-       "<table id=\"T_d18d5\">\n",
-       "  <thead>\n",
-       "    <tr>\n",
-       "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_d18d5_level0_col0\" class=\"col_heading level0 col0\" >answer_relevancy</th>\n",
-       "      <th id=\"T_d18d5_level0_col1\" class=\"col_heading level0 col1\" >judge_exactness</th>\n",
-       "      <th id=\"T_d18d5_level0_col2\" class=\"col_heading level0 col2\" >judge_notator</th>\n",
-       "      <th id=\"T_d18d5_level0_col3\" class=\"col_heading level0 col3\" >output_length</th>\n",
-       "      <th id=\"T_d18d5_level0_col4\" class=\"col_heading level0 col4\" >generation_time</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row0\" class=\"row_heading level0 row0\" >AgentPublic/llama3-instruct-guillaumetell--rag</th>\n",
-       "      <td id=\"T_d18d5_row0_col0\" class=\"data row0 col0\" >0.80 ± 0.02</td>\n",
-       "      <td id=\"T_d18d5_row0_col1\" class=\"data row0 col1\" >0.10 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row0_col2\" class=\"data row0 col2\" >5.39 ± 0.13</td>\n",
-       "      <td id=\"T_d18d5_row0_col3\" class=\"data row0 col3\" >133.86 ± 2.83</td>\n",
-       "      <td id=\"T_d18d5_row0_col4\" class=\"data row0 col4\" >5.72 ± 0.65</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row1\" class=\"row_heading level0 row1\" >meta-llama/Llama-3.1-8B-Instruct--rag</th>\n",
-       "      <td id=\"T_d18d5_row1_col0\" class=\"data row1 col0\" >0.75 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row1_col1\" class=\"data row1 col1\" >0.08 ± 0.02</td>\n",
-       "      <td id=\"T_d18d5_row1_col2\" class=\"data row1 col2\" >5.08 ± 0.20</td>\n",
-       "      <td id=\"T_d18d5_row1_col3\" class=\"data row1 col3\" >129.53 ± 5.10</td>\n",
-       "      <td id=\"T_d18d5_row1_col4\" class=\"data row1 col4\" >5.39 ± 0.56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row2\" class=\"row_heading level0 row2\" >google/gemma-2-9b-it</th>\n",
-       "      <td id=\"T_d18d5_row2_col0\" class=\"data row2 col0\" >0.78 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row2_col1\" class=\"data row2 col1\" >0.05 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row2_col2\" class=\"data row2 col2\" >4.27 ± 0.13</td>\n",
-       "      <td id=\"T_d18d5_row2_col3\" class=\"data row2 col3\" >229.31 ± 6.48</td>\n",
-       "      <td id=\"T_d18d5_row2_col4\" class=\"data row2 col4\" >5.92 ± 0.23</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row3\" class=\"row_heading level0 row3\" >neuralmagic/Meta-Llama-3.1-70B-Instruct-FP8</th>\n",
-       "      <td id=\"T_d18d5_row3_col0\" class=\"data row3 col0\" >0.87 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row3_col1\" class=\"data row3 col1\" >0.04 ± 0.01</td>\n",
-       "      <td id=\"T_d18d5_row3_col2\" class=\"data row3 col2\" >4.74 ± 0.18</td>\n",
-       "      <td id=\"T_d18d5_row3_col3\" class=\"data row3 col3\" >267.64 ± 4.95</td>\n",
-       "      <td id=\"T_d18d5_row3_col4\" class=\"data row3 col4\" >18.14 ± 2.90</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row4\" class=\"row_heading level0 row4\" >meta-llama/Llama-3.3-70B-Instruct</th>\n",
-       "      <td id=\"T_d18d5_row4_col0\" class=\"data row4 col0\" >0.85 ± 0.02</td>\n",
-       "      <td id=\"T_d18d5_row4_col1\" class=\"data row4 col1\" >0.03 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row4_col2\" class=\"data row4 col2\" >4.15 ± 0.12</td>\n",
-       "      <td id=\"T_d18d5_row4_col3\" class=\"data row4 col3\" >344.60 ± 3.00</td>\n",
-       "      <td id=\"T_d18d5_row4_col4\" class=\"data row4 col4\" >12.71 ± 0.20</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row5\" class=\"row_heading level0 row5\" >deepseek-ai/DeepSeek-R1-Distill-Qwen-32B</th>\n",
-       "      <td id=\"T_d18d5_row5_col0\" class=\"data row5 col0\" >0.85 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row5_col1\" class=\"data row5 col1\" >0.03 ± 0.01</td>\n",
-       "      <td id=\"T_d18d5_row5_col2\" class=\"data row5 col2\" >3.99 ± 0.08</td>\n",
-       "      <td id=\"T_d18d5_row5_col3\" class=\"data row5 col3\" >830.29 ± 21.77</td>\n",
-       "      <td id=\"T_d18d5_row5_col4\" class=\"data row5 col4\" >18.86 ± 0.54</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row6\" class=\"row_heading level0 row6\" >meta-llama/Llama-3.1-8B-Instruct</th>\n",
-       "      <td id=\"T_d18d5_row6_col0\" class=\"data row6 col0\" >0.84 ± 0.03</td>\n",
-       "      <td id=\"T_d18d5_row6_col1\" class=\"data row6 col1\" >0.02 ± 0.02</td>\n",
-       "      <td id=\"T_d18d5_row6_col2\" class=\"data row6 col2\" >3.61 ± 0.14</td>\n",
-       "      <td id=\"T_d18d5_row6_col3\" class=\"data row6 col3\" >293.59 ± 4.15</td>\n",
-       "      <td id=\"T_d18d5_row6_col4\" class=\"data row6 col4\" >6.37 ± 0.19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th id=\"T_d18d5_level0_row7\" class=\"row_heading level0 row7\" >meta-llama/Llama-3.2-3B-Instruct</th>\n",
-       "      <td id=\"T_d18d5_row7_col0\" class=\"data row7 col0\" >0.72 ± 0.06</td>\n",
-       "      <td id=\"T_d18d5_row7_col1\" class=\"data row7 col1\" >0.01 ± 0.01</td>\n",
-       "      <td id=\"T_d18d5_row7_col2\" class=\"data row7 col2\" >2.87 ± 0.06</td>\n",
-       "      <td id=\"T_d18d5_row7_col3\" class=\"data row7 col3\" >319.26 ± 12.72</td>\n",
-       "      <td id=\"T_d18d5_row7_col4\" class=\"data row7 col4\" >2.72 ± 0.13</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n"
-      ],
-      "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x7f5559c8fcb0>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'requests' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 8\u001b[0m\n\u001b[1;32m      4\u001b[0m arr_all \u001b[38;5;241m=\u001b[39m {} \u001b[38;5;66;03m# keep references of source array per metric metrics \u001b[39;00m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# Fetch results and compute macro metrics (mean, std etc).\u001b[39;00m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;66;03m# --\u001b[39;00m\n\u001b[0;32m----> 8\u001b[0m response \u001b[38;5;241m=\u001b[39m \u001b[43mrequests\u001b[49m\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mEG1_API_URL\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m/experiment_set/\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mexpset_id\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m, headers\u001b[38;5;241m=\u001b[39mheaders)\n\u001b[1;32m      9\u001b[0m expset \u001b[38;5;241m=\u001b[39m response\u001b[38;5;241m.\u001b[39mjson()\n\u001b[1;32m     10\u001b[0m rows \u001b[38;5;241m=\u001b[39m []\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'requests' is not defined"
+     ]
     }
    ],
    "source": [
