Update notebook run_tooling v2

--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "fb6038d3-def4-4fc4-8ae2-4327af3e919f",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -51,19 +51,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: mfs_tooling_v0 (33)\n"
+      "Created expset: mfs_tooling_v2 (40)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"mfs_tooling_v0\"\n",
-    "expset_readme = \"Comparing some models variability.\"\n",
-    "metrics = [\"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\", \"nb_tool_calls\", \"contextual_relevancy\", \"ragas\", \"faithfulness\"]\n",
+    "expset_name = \"mfs_tooling_v2\"\n",
+    "expset_readme = \"Evaluating tooling capabilities.\"\n",
+    "prompt_system = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques de manière claire, concrète et concise.\"\n",
+    "metrics = [\"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\", \"nb_tool_calls\", \"contextual_relevancy\", \"faithfulness\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
-    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}},\n",
+    "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"prompt_system\": prompt_system},\n",
     "    \"metrics\" : metrics,\n",
     "    \"judge_model\": \"gpt-4o\",\n",
     "}\n",
@@ -77,15 +78,16 @@
     "\n",
     "# Duplicate with each model params\n",
     "# --\n",
+    "prompt_suffixe = \" Utilise la recherche dans les contextes du service publique systématiquement.\"\n",
     "tools = [\n",
     "    #{\"_tools_\": [\"search_albert_collections_v0\"]},\n",
-    "    {\"_tools_\": [\"search_albert_collections_v1\"]},\n",
+    "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suuported by albert-api atm..\n",
     "    {\"_tools_\": [\"search_albert_collections_v2\"]},\n",
     "]\n",
     "for i in range(len(grid_params[\"model\"])):\n",
     "    for extra_params in tools:\n",
     "        model = grid_params[\"model\"][i]\n",
-    "        grid_params[\"model\"].append(model.copy() | {\"extra_params\": extra_params})\n",
+    "        grid_params[\"model\"].append(model.copy() | {\"extra_params\": extra_params} | {\"prompt_system\": prompt_system + prompt_suffixe})\n",
     "\n",
     "# Lauching the experiment set\n",
     "expset = {\n",
@@ -101,6 +103,14 @@
     "else:\n",
     "    print(resp)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29977dce-39d6-471b-9cbb-9c1eff2ec0e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
