--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -58,7 +58,7 @@
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"mfs_tooling_v2\"\n",
+    "expset_name = \"mfs_tooling_v3\"\n",
     "expset_readme = \"Evaluating tooling capabilities.\"\n",
     "prompt_system = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques de manière claire, concrète et concise.\"\n",
     "metrics = [\"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\", \"nb_tool_calls\", \"contextual_relevancy\", \"faithfulness\"]\n",
@@ -78,10 +78,11 @@
     "\n",
     "# Duplicate with each model params\n",
     "# --\n",
-    "prompt_suffixe = \" Utilise la recherche dans les contextes du service publique systématiquement.\"\n",
+    "#prompt_suffixe = \" Utilise la recherche dans les contextes du service publique systématiquement.\"  # @WARNING: cause multi-agent stuck in a the loop. \n",
+    "prompt_suffixe = \"\"\n",
     "tools = [\n",
     "    #{\"_tools_\": [\"search_albert_collections_v0\"]},\n",
-    "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suuported by albert-api atm..\n",
+    "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suported by albert-api atm..\n",
     "    {\"_tools_\": [\"search_albert_collections_v2\"]},\n",
     "]\n",
     "for i in range(len(grid_params[\"model\"])):\n",
