hotfix(mcp): fix the multi-step loop

--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -51,17 +51,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: mfs_tooling_v3 (43)\n"
+      "Created expset: mfs_tooling_v3 (44)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"mfs_tooling_v3\"\n",
+    "expset_name = \"mfs_tooling_v4\"\n",
     "expset_readme = \"Evaluating tooling capabilities.\"\n",
-    "prompt_system = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques de manière claire, concrète et concise.\"\n",
-    "metrics = [\"judge_exactness\", \"judge_notator\", \"output_length\", \"generation_time\", \"nb_tool_calls\", \"contextual_relevancy\", \"faithfulness\"]\n",
+    "prompt_system = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
+    "metrics = [\"judge_exactness\", \"judge_precision\", \"judge_notator\", \"output_length\", \"generation_time\", \"nb_tool_calls\", \"contextual_relevancy\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"prompt_system\": prompt_system},\n",
@@ -78,8 +78,7 @@
     "\n",
     "# Duplicate with each model params\n",
     "# --\n",
-    "#prompt_suffixe = \" Utilise la recherche dans les contextes du service publique systématiquement.\"  # @WARNING: cause multi-agent stuck in a the loop. \n",
-    "prompt_suffixe = \"\"\n",
+    "prompt_suffixe = \" Tu recherches des informations précises et à jour pour augmenter ta pertinence.\"\n",
     "tools = [\n",
     "    #{\"_tools_\": [\"search_albert_collections_v0\"]},\n",
     "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suported by albert-api atm..\n",
