feat(ui): add judge_precision as preferred metric

--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -51,17 +51,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: mfs_tooling_v3 (44)\n"
+      "Created expset: mfs_tooling_v5 (48)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"mfs_tooling_v4\"\n",
+    "expset_name = \"mfs_tooling_v5\"\n",
     "expset_readme = \"Evaluating tooling capabilities.\"\n",
     "prompt_system = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
-    "metrics = [\"judge_exactness\", \"judge_precision\", \"judge_notator\", \"output_length\", \"generation_time\", \"nb_tool_calls\", \"contextual_relevancy\"]\n",
+    "metrics = [\"judge_precision\", \"output_length\", \"generation_time\", \"nb_tool_calls\"]\n",
     "common_params = {\n",
     "    \"dataset\" : \"MFS_questions_v01\",\n",
     "    \"model\": {\"sampling_params\" : {\"temperature\": 0.2}, \"prompt_system\": prompt_system},\n",
@@ -78,7 +78,7 @@
     "\n",
     "# Duplicate with each model params\n",
     "# --\n",
-    "prompt_suffixe = \" Tu recherches des informations précises et à jour pour augmenter ta pertinence.\"\n",
+    "prompt_system_tool = \"Tu recherche des données précises et à jour en utilisant les outils mis à disposition sur les services publiques français. Réponds de manière précise, conrète et concise.\"\n",
     "tools = [\n",
     "    #{\"_tools_\": [\"search_albert_collections_v0\"]},\n",
     "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suported by albert-api atm..\n",
@@ -87,7 +87,7 @@
     "for i in range(len(grid_params[\"model\"])):\n",
     "    for extra_params in tools:\n",
     "        model = grid_params[\"model\"][i]\n",
-    "        grid_params[\"model\"].append(model.copy() | {\"extra_params\": extra_params} | {\"prompt_system\": prompt_system + prompt_suffixe})\n",
+    "        grid_params[\"model\"].append(model.copy() | {\"extra_params\": extra_params} | {\"prompt_system\": prompt_system_tool})\n",
     "\n",
     "# Lauching the experiment set\n",
     "expset = {\n",
