feat: support thinking model in judge (#139)

--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1b60dd8b-e7b5-4a08-86c7-1025c5b80f18",
    "metadata": {},
    "outputs": [
@@ -51,15 +51,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Created expset: mfs_tooling_v5 (48)\n"
+      "Created expset: mfs_tooling_v8 (51)\n"
      ]
     }
    ],
    "source": [
     "# Designing my experiments\n",
     "# --\n",
-    "expset_name = \"mfs_tooling_v5\"\n",
-    "expset_readme = \"Evaluating tooling capabilities.\"\n",
+    "expset_name = \"mfs_tooling_v8\"\n",
+    "expset_readme = \"Evaluating tooling capabilities.  \\nembedding model: bge-multilingual-gemma2  \\ncollections: chunks-v13-04-25, limit=10\"\n",
     "prompt_system = \"Tu es un agent de l'état Français qui répond en langue française aux questions des usagers des services publiques et citoyens de manière précise, concrète et concise.\"\n",
     "metrics = [\"judge_precision\", \"output_length\", \"generation_time\", \"nb_tool_calls\"]\n",
     "common_params = {\n",
@@ -81,7 +81,7 @@
     "prompt_system_tool = \"Tu recherche des données précises et à jour en utilisant les outils mis à disposition sur les services publiques français. Réponds de manière précise, conrète et concise.\"\n",
     "tools = [\n",
     "    #{\"_tools_\": [\"search_albert_collections_v0\"]},\n",
-    "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suported by albert-api atm..\n",
+    "    {\"_tools_\": [\"search_albert_collections_v1\"]}, # tool_choice=required not suported by albert-api atm.\n",
     "    {\"_tools_\": [\"search_albert_collections_v2\"]},\n",
     "]\n",
     "for i in range(len(grid_params[\"model\"])):\n",
@@ -107,7 +107,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29977dce-39d6-471b-9cbb-9c1eff2ec0e4",
+   "id": "0fe878a3-39f6-41fc-839f-da0bb083a6f6",
    "metadata": {},
    "outputs": [],
    "source": []
