fix NB + deploy

--- a/notebooks/RAG-adhoc.ipynb
+++ b/notebooks/RAG-adhoc.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "a64b1ae0-5f1a-4d0a-80cb-aac515cef44a",
+   "metadata": {},
+   "source": [
+    "# Ad-hoc RAG\n",
+    "\n",
+    "Evaluate results from an ad-hoc RAG similar than the one behind franceservices.etalab.gouv.fr using eg1 and ModelRaw schema"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7040307b-da60-4144-93ec-827967cd4303",
