--- a/notebooks/run_toolings.ipynb
+++ b/notebooks/run_toolings.ipynb
@@ -17,10 +17,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import sys\n",
-    "import time\n",
-    "\n",
+    "import os, sys, time, json\n",
     "import dotenv\n",
     "from IPython.display import HTML\n",
     "import numpy as np\n",
